# lightkurve

./: .azure-template.yml  .buildinfo  .buildinfo.bak  .git-blame-ignore-revs  .gitignore  .travis.yml  ACF cluster example.ipynb  AUTHORS.rst  CHANGES.rst  CHANGES.rst~  CITATION  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  Kepler Test.ipynb  LICENSE  MANIFEST.in  Makefile  README.rst  appveyor.yml  azure-pipelines.yml  azure-steps.yml  cbv_test.ipynb  citing.html  clusters.csv  community_software.html  contributing.html  developer.html  environment.yml  genindex.html  index.html  install.html  issue1326_full.md  log.txt  notes_issue154.ipynb  objects.inv  other_software.html  problem_star_check.ipynb  py-modindex.html  (+14 more)
.github/: issue_template.md
.ipynb_checkpoints/: Untitled-checkpoint.html  quickstart-checkpoint.html
_images/: inheritance-0297dd0358a9c2882900ca25337403320172bb2a.png.map  inheritance-063cc584cb3b0c894f44ce854f83b00b2ed64a3a.png.map  inheritance-06f02cfa7d6f1992268c5c389617ca8e3f08b42f.png.map  inheritance-0740a8719d1333c8277ef04e8452023915059165.png.map  inheritance-08972f2cee319cffa37a498626f8cc5e877c2018.png.map  inheritance-1bc21e6258857e8fd8090f6624bb3e7b76779963.png.map  inheritance-1f7fe27ab38aaa8730518061705edafac365f47d.png.map  inheritance-1f8ea850fadaaa82abfbb155a1227eb7631eee34.png.map  inheritance-2582f5692190d3e3c55e8a33107994da6b5249e0.png.map  inheritance-2a1a552cab1bc92e23ceec437aba66bf4db4b4b8.png.map  inheritance-30035bb0bb105b705d3eb11bda117df31113c8ef.png.map  inheritance-32e8a296996274644dc4bbd47e80d502b62bdf87.png.map  inheritance-3829e0081d8f792c5ac64d8d33ecad3d54609021.png.map  inheritance-39b95ed0610d4f2362cf47e6eb7bf85482e2c196.png.map  inheritance-3d40a7712fc9ac1c97be5c10c81079d19e0bb997.png.map  inheritance-3f65714e5bbd32b154e9edb8489bfa33a69f8972.png.map  inheritance-473c573aaa823a6f13c169857ae19d5dabed03d2.png.map  inheritance-497bf7ffd261a1761973c1384444daff05fd5526.png.map  inheritance-5caf281474e75a5c08963c3c1c1df03868ccc8e6.png.map  inheritance-62768afd3acfa1265b3632b487d7689ea78f8d70.png.map  inheritance-69fba1817d992aa2bf20a99f7cb4e48b9047de13.png.map  inheritance-8101dca81b7a5e0b0db3215e21d3511e0818eda6.png.map  inheritance-815e8ad9eb44caed90d4633e4f133df3219de839.png.map  inheritance-8251981446fe3a4189b5d092a832d4fa5c889cab.png.map  inheritance-82ab1020a928da54b9b0be851be8c26df80d5a83.png.map  inheritance-83e4f2dcd250f49dab1c8a84af45afa27e7f1081.png.map  inheritance-8504cbf1f73df5c500129733bf3f55ea9df060c2.png.map  inheritance-913071db5ffc749bee7a3c79ab7b057a70eed7a6.png.map  inheritance-92f490992aee315f8d017edcb84b48730b7561c9.png.map  inheritance-95b8b412a1a18ae6f84f7f501aafed43f1139a4c.png.map  inheritance-998f45f5626bff84c4004ab80ba08272a2c8bd18.png.map  inheritance-9ab61ef1db651b44879cdd91f97d84940ee37169.png.map  inheritance-9b00423e1e8710c6f50bc03b4afee2da735fe186.png.map  inheritance-9f43b1ba113188fbace91a47a3a2a20ef176cf69.png.map  inheritance-a9396a778267aea636b9731122d16377e53b7b1e.png.map  inheritance-aa39aa7c5af73fce54b924da3f0681618dce3f74.png.map  inheritance-aeebd01664403625b7f5a265bacbc7890e1621ea.png.map  inheritance-b54cfb5579a46ea161d4c860f2b9e6b02e12226a.png.map  inheritance-b55e3afb923e505e1473b0772c7d5444fc137760.png.map  inheritance-bfd9ed78b63d9ba9c73c1f3cb8f08040696bc195.png.map  (+17 more)
_modules/: index.html
_sources/: contributing.rst.txt  index.rst.txt  install.rst.txt  other_software.rst.txt  quickstart.ipynb.txt  whats-new-v2.ipynb.txt
_static/: documentation_options.js
about/: changelog.html  citing.html  contributing.html  developer.html  documentation.html  index.html  install.html  other_software.html  release-procedure.html  testing.html  vision.html
api/: collections.html  correctors.html  index.html  lightcurve.html  lightcurvefile.html  lightkurve.collections.LightCurveCollection.html  lightkurve.collections.LightCurveFileCollection.html  lightkurve.collections.TargetPixelFileCollection.html  lightkurve.correctors.DesignMatrix.html  lightkurve.correctors.DesignMatrixCollection.html  lightkurve.correctors.KeplerCBVCorrector.html  lightkurve.correctors.PLDCorrector.html  lightkurve.correctors.RegressionCorrector.html  lightkurve.correctors.SFFCorrector.html  lightkurve.correctors.TessPLDCorrector.html  lightkurve.lightcurve.FoldedLightCurve.html  lightkurve.lightcurve.KeplerLightCurve.html  lightkurve.lightcurve.LightCurve.html  lightkurve.lightcurve.TessLightCurve.html  lightkurve.lightcurve.iterative_box_period_search.html  lightkurve.lightcurvefile.KeplerLightCurveFile.html  lightkurve.lightcurvefile.LightCurveFile.html  lightkurve.lightcurvefile.TessLightCurveFile.html  lightkurve.periodogram.BoxLeastSquaresPeriodogram.html  lightkurve.periodogram.LombScarglePeriodogram.html  lightkurve.periodogram.Periodogram.html  lightkurve.prf.BackgroundParameters.html  lightkurve.prf.BackgroundPrior.html  lightkurve.prf.FixedValuePrior.html  lightkurve.prf.FocusParameters.html  lightkurve.prf.FocusPrior.html  lightkurve.prf.KeplerPRF.html  lightkurve.prf.MotionParameters.html  lightkurve.prf.MotionPrior.html  lightkurve.prf.PRFPhotometry.html  lightkurve.prf.SceneModel.html  lightkurve.prf.SimpleKeplerPRF.html  lightkurve.prf.StarParameters.html  lightkurve.prf.StarPrior.html  lightkurve.prf.TPFModel.html  (+34 more)
development/: contributing.html  documentation.html  index.html  release-procedure.html  testing.html  vision.html
docs/: Makefile  README.rst  make.bat  pre_execute_ipynbs.py  requirements.txt
lightkurve/: __init__.py  __init__.py~  collection.py  collections.py  convenience.py  correctors.py  factory.py  ffi.py  injection.py  interact.py  interact_bls.py  lightcurve.py  lightcurve.py~  lightcurvecollection.py  lightcurvefile.py  mast.py  nexsci.py  periodogram.py  prf.py  prf_photometry.py  psf_photometry_prototype.py  search.py  seismology.py  sff.py  targetpixelfile (dhcp-18-189-33-82.dyn.mit.edu's conflicted copy 2018-06-27).py  targetpixelfile.py  targetpixelfile.py~  targetpixelfilecollection.py  time.py  units.py  utils.py  version.py
reference/: config.html  (+10 more)
(+1409 files in other folders)
