[tool.poetry]
name = "lightkurve"
version = "2.0.6"
description = "A friendly package for Kepler & TESS time series analysis in Python."
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>"]
readme = "README.rst"
homepage = "https://docs.lightkurve.org"
repository = "https://github.com/lightkurve/lightkurve"
keywords = ["NASA", "Kepler", "TESS", "Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
include = ["AUTHORS.rst", "CHANGES.rst", "CONTRIBUTING.rst", "CITATION"]

[tool.poetry.urls]
"Documentation" = "https://docs.lightkurve.org"
"Bug Tracker" = "https://github.com/lightkurve/lightkurve/issues"

[tool.poetry.dependencies]
python = ">=3.6.1"
numpy = ">=1.11"
astropy = ">=4.1"
scipy = ">=0.19.0"
matplotlib = ">=1.5.3"
astroquery = ">=0.3.10"
oktopus = ">=0.1.2"
beautifulsoup4 = ">=4.6.0"
requests = ">=2.22.0"
tqdm = ">=4.25.0"
pandas = ">=1.1.4"
uncertainties = ">=3.1.4"
patsy = ">=0.5.0"
fbpca = ">=1.0"
bokeh = ">=1.0"
memoization = { version = ">=0.3.1", python = ">=3.6,<4.0" }
scikit-learn = ">=0.24.0"

[tool.poetry.dev-dependencies]
jupyterlab = "^2.0.0"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"
isort = { version = ">=5.6.4", python = ">=3.6,<4.0" }
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-remotedata = "^0.3.2"
pytest-doctestplus = "^0.8.0"
pytest-xdist = "^2.1.0"
jupyter = "^1.0.0"
Sphinx = "^3.3.1"
nbsphinx = "^0.8.0"
numpydoc = "^1.1.0"
sphinx-automodapi = "^0.13"
sphinxcontrib-rawfiles = "^0.1.1"
pydata-sphinx-theme = "^0.4.1"
pylint = "^2.6.0"
ghp-import = "^1.0.1"
openpyxl = "^3.0.7"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]  # config for `dephell deps convert`
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
