[tool.poetry]
name = "lightkurve"
version = "2.2.1"
description = "A friendly package for Kepler & TESS time series analysis in Python."
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>"]
readme = "README.rst"
homepage = "https://docs.lightkurve.org"
repository = "https://github.com/lightkurve/lightkurve"
keywords = ["NASA", "Kepler", "TESS", "Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
include = ["AUTHORS.rst", "CHANGES.rst", "CONTRIBUTING.rst", "CITATION"]

[tool.poetry.urls]
"Documentation" = "https://docs.lightkurve.org"
"Bug Tracker" = "https://github.com/lightkurve/lightkurve/issues"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.18"
astropy = ">=5.0"
scipy = { version = ">=1.7", python = ">=3.8,<3.11" }
matplotlib = ">=3.1"
astroquery = ">=0.3.10"
oktopus = ">=0.1.2"
beautifulsoup4 = ">=4.6.0"
requests = ">=2.22.0"
urllib3 = { version = ">=1.23", python = ">=3.8,<4.0" }  # necessary to make requests work on py310
tqdm = ">=4.25.0"
pandas = ">=1.1.4"
uncertainties = ">=3.1.4"
patsy = ">=0.5.0"
fbpca = ">=1.0"
# tpf.interact_sky() tap selection requires a bug fix due to
#  https://github.com/bokeh/bokeh/issues/6508
bokeh = ">=1.1"
memoization = { version = ">=0.3.1", python = ">=3.8,<4.0" }
scikit-learn = ">=0.24.0"

[tool.poetry.dev-dependencies]
jupyterlab = ">=2.0.0"
black = ">=21.12b0"
flake8 = ">=3.8.4"
mypy = ">=0.930"
isort = { version = ">=5.6.4", python = ">=3.6,<4.0" }
pytest = ">=6.1.2"
pytest-cov = ">=2.10.1"
pytest-remotedata = ">=0.3.2"
pytest-doctestplus = ">=0.8.0"
pytest-xdist = ">=2.1.0"
jupyter = ">=1.0.0"
Sphinx = ">=4.3.0"
nbsphinx = ">=0.8.7"
numpydoc = ">=1.1.0"
sphinx-automodapi = ">=0.13"
sphinxcontrib-rawfiles = ">=0.1.1"
pydata-sphinx-theme = ">=0.7.1"
pylint = ">=2.6.0"
ghp-import = ">=1.0.1"
openpyxl = ">=3.0.7"
tox = ">=3.24.5"
mistune = "<2.0.0"  # Workaround for #1162 (not a true dependency)

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
