[tool.poetry]
name = "lightkurve"
version = "2.5.2dev"
description = "A friendly package for Kepler & TESS time series analysis in Python."
license = "MIT"
authors = ["Geert Barentsen <hello@geert.io>", "TESS Science Support Center <tesshelp@bigbang.gsfc.nasa.gov>"]
readme = "README.rst"
homepage = "https://lightkurve.github.io/lightkurve/"
repository = "https://github.com/lightkurve/lightkurve"
keywords = ["NASA", "Kepler", "TESS", "Astronomy"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
include = ["AUTHORS.rst", "CHANGES.rst", "CONTRIBUTING.rst", "CITATION"]

[tool.poetry.urls]
"Documentation" = "https://lightkurve.github.io/lightkurve/"
"Bug Tracker" = "https://github.com/lightkurve/lightkurve/issues"

[tool.poetry.dependencies]
python = "^3.9"
numpy = [
      { version = ">=1.18", python = ">=3.8,<3.12" },
      { version = ">=1.26", python = ">=3.12" }
]
astropy = ">=5.0"
scipy = { version = ">=1.7", python = ">=3.8,<3.14" }
matplotlib = ">=3.1"
astroquery = ">=0.3.10"
beautifulsoup4 = ">=4.6.0"
requests = ">=2.22.0"
urllib3 = { version = ">=1.23", python = ">=3.8,<4.0" }  # necessary to make requests work on py310
tqdm = ">=4.25.0"
pandas = ">=1.3.6"
uncertainties = ">=3.1.4"
patsy = ">=0.5.0"
fbpca = ">=1.0"
# bokeh v2.3.2+ requirement due to https://github.com/lightkurve/lightkurve/pull/1428
bokeh = ">=2.3.2"
memoization = { version = ">=0.3.1", python = ">=3.8,<4.0" }
scikit-learn = ">=0.24.0"
s3fs = ">=2024.6.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = ">=2.0.0"
black = ">=21.12b0"
flake8 = ">=3.8.4"
mypy = ">=0.930"
isort = { version = ">=5.6.4", python = ">=3.6,<4.0" }
oktopus = ">=0.1.2"
autograd = { version = ">=1.8.0", python = ">=3.11" }    # minimum version to support numpy>=2
pytest = ">=6.1.2"
pytest-cov = ">=2.10.1"
pytest-remotedata = ">=0.3.2"
pytest-doctestplus = ">=0.8.0"
pytest-xdist = ">=2.1.0"
jupyter = ">=1.0.0"
Sphinx = ">=4.3.0"
nbsphinx = ">=0.8.7"
numpydoc = ">=1.1.0"
sphinx-automodapi = ">=0.13"
sphinxcontrib-rawfiles = ">=0.1.1"
pydata-sphinx-theme = "==0.8.1"
pylint = ">=2.6.0"
ghp-import = "^2.1.0"
openpyxl = ">=3.0.7"
tox = ">=3.24.5"
mistune = "<2.0.0"  # Workaround for #1162 (not a true dependency)
# docutils 0.21 cannot be installed with poetry
# See https://github.com/python-poetry/poetry/issues/9293
docutils = "!=0.21"
lxml-html-clean = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
filterwarnings = [
    "default",
    "always::DeprecationWarning",
    "once::ResourceWarning",
    "ignore:Warning. the tpfmodel module is not available without oktopus:UserWarning",
    "ignore:More than 20 figures have been opened:RuntimeWarning",
    "always::lightkurve.utils.LightkurveWarning",
]
